extends Node2D


onready var WinTransparent = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer/TransparentWindow
onready var WinColor = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer/ColorPickerButton
onready var VoiceLevel = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer/VoiceLevel
onready var MicButton = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer/MicButton
onready var PanZoom = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer/PanZoomButton

onready var ExprButton = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer2/ExpressionButton
onready var EnableKey = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer2/KeyEnable
onready var NormalKey = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer2/NormalKey
onready var HappyKey = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer2/HappyKey
onready var ExcitedKey =$RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer2/ExcitedKey
onready var AngryKey = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer2/AngryKey
onready var EnableDecor = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer2/EnableDecorButton
onready var MoveDecor = $RootUI/PanelContainer/MarginContainer/VBoxContainer/GridContainer2/MoveDecor
